--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
   <div class="container">
   <h1>Don't be too strict! I'm just learning!</h1>
-  <script src="/js/index.js"></script>
+  <!-- <script src="/js/index.js"></script>
   <script src="/js/task A.js"></script>
   <script src="/js/task B+C.js"></script>
-  <script src="/js/task D.js"></script>
+  <script src="/js/task D.js"></script> -->
+  <script src="/js/Petrovichi.js"></script>
 </div>
 </body>
 </html>
