array with random unique value, but without polyfill

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <script src="/js/task A.js"></script>
   <script src="/js/task B+C.js"></script>
   <script src="/js/task D.js"></script> -->
-  <script src="/js/Petrovichi.js"></script>
+  <!-- <script src="/js/Petrovichi.js"></script> -->
+  <script src="/js/randomNumbers.js"></script>
 </div>
 </body>
 </html>
