--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <!-- <script src="/js/Petrovichi.js"></script> -->
       <script src="/js/randomNumbers.js"></script>
       <script src="/js/firstUniqueSymbol.js"></script>
+      <script src="/js/timer.js"></script>
     </div>
   </body>
 </html>
