--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <script src="/js/task B+C.js"></script>
   <script src="/js/task D.js"></script> -->
       <!-- <script src="/js/Petrovichi.js"></script> -->
-      <script src="/js/randomNumbers.js"></script>
+      <!-- <script src="/js/randomNumbers.js"></script>
       <script src="/js/firstUniqueSymbol.js"></script>
-      <script src="/js/timer.js"></script>
+      <script src="/js/timer.js"></script> -->
+      <script src="/js/calculator.js"></script>
     </div>
   </body>
 </html>
