part of constructor

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <script src="/js/firstUniqueSymbol.js"></script>
       <script src="/js/timer.js"></script> -->
       <script src="/js/calculator.js"></script>
+      <script src="/js/constructor.js"></script>
     </div>
   </body>
 </html>
