homework, theme DOM

--- a/index.html
+++ b/index.html
@@ -10,10 +10,40 @@
 <body>
   <div class="container">
   <h1>Don't be too strict! I'm just learning!</h1>
+  <div class="modal">
+    <!-- В стилях display.none, удалите, чтобы увидеть -->
+    <div class="popap">
+        <div class="popap-head">
+            <div class="close">X</div>
+        </div>
+        <div class="popap-main">
+            <form class="popap-form">
+                <label>
+                    <span>First Name</span>
+                    <input type="text" name="first-name">
+                </label>
+                <label>
+                    <span>Last Name</span>
+                    <input type="text" name="last-name">
+                </label>
+                <label>
+                    <span>Age</span>
+                    <input type="text" name="age">
+                </label>
+            </form>
+            <div class="popap-btn">
+                <div class="btn close">close</div>
+                <div class="btn ok">ok</div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="btn add-user">add user</div>
   <script src="/js/index.js"></script>
   <script src="/js/task A.js"></script>
   <script src="/js/task B+C.js"></script>
   <script src="/js/task D.js"></script>
+  <script src="/js/class with figures.js"></script>
 </div>
 </body>
 </html>
