--- a/index.html
+++ b/index.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-  <div class="container">
-  <h1>Don't be too strict! I'm just learning!</h1>
-  <div class="modal">
-    <!-- В стилях display.none, удалите, чтобы увидеть -->
-    <div class="popap">
-        <div class="popap-head">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Don't be too strict! I'm just learning!</h1>
+      <div class="modal">
+        <!-- В стилях display.none, удалите, чтобы увидеть -->
+        <div class="popap">
+          <div class="popap-head">
             <div class="close">X</div>
-        </div>
-        <div class="popap-main">
-            <form class="popap-form">
-                <label>
-                    <span>First Name</span>
-                    <input type="text" name="first-name">
-                </label>
-                <label>
-                    <span>Last Name</span>
-                    <input type="text" name="last-name">
-                </label>
-                <label>
-                    <span>Age</span>
-                    <input type="text" name="age">
-                </label>
+          </div>
+          <div class="popap-main">
+            <form class="popap-form" id="popap-form">
+              <label>
+                <span>First Name</span>
+                <input type="text" name="first-name" />
+              </label>
+              <label>
+                <span>Last Name</span>
+                <input type="text" name="last-name"  />
+              </label>
+              <label>
+                <span>Age</span>
+                <input type="text" name="age"  />
+              </label>
             </form>
             <div class="popap-btn">
-                <div class="btn close">close</div>
-                <div class="btn ok">ok</div>
+              <div class="btn close">close</div>
+              <div class="btn ok">ok</div>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="btn add-user">add user</div>
     </div>
-</div>
-<div class="btn add-user">add user</div>
-  <script src="/js/index.js"></script>
+    <!-- <script src="/js/index.js"></script>
   <script src="/js/task A.js"></script>
   <script src="/js/task B+C.js"></script>
   <script src="/js/task D.js"></script>
   <script src="/js/class with figures.js"></script>
-</div>
-</body>
+  <script src="/js/Petrovichi.js"></script> -->
+    <script src="/js/modal.js"></script>
+  </body>
 </html>
