--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <form class="popap-form" id="popap-form">
               <label>
                 <span>First Name</span>
-                <input type="text" name="first-name" />
+                <input type="text" name="firstName" class="first-name" />
               </label>
               <label>
                 <span>Last Name</span>
-                <input type="text" name="last-name"  />
+                <input type="text" name="lastName" class="last-name"  />
               </label>
               <label>
                 <span>Age</span>
-                <input type="text" name="age"  />
+                <input type="text" name="age" class="age" />
               </label>
             </form>
             <div class="popap-btn">
@@ -39,6 +39,13 @@
         </div>
       </div>
       <div class="btn add-user">add user</div>
+      <table class="8th_home_work">
+        <thead>
+          <th>
+            <td></td>
+          </th>
+        </thead>
+      </table>
       <!-- <script src="/js/index.js"></script>
   <script src="/js/task A.js"></script>
   <script src="/js/task B+C.js"></script>
