--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div class="container">
-      <h1>Don't be too strict! I'm just learning!</h1>
       <div class="modal">
         <!-- В стилях display.none, удалите, чтобы увидеть -->
         <div class="popap">
@@ -38,14 +37,19 @@
           </div>
         </div>
       </div>
-      <div class="btn add-user">add user</div>
-      <table class="8th_home_work">
+      
+      <div class="table-container">
+      <table class="homework-8th">
         <thead>
           <th>
-            <td></td>
+            <td>First Name</td>
+            <td>Last Name</td>
+            <td>Age</td>
           </th>
         </thead>
       </table>
+    </div>
+    <div class="btn add-user">add user</div>
       <!-- <script src="/js/index.js"></script>
   <script src="/js/task A.js"></script>
   <script src="/js/task B+C.js"></script>
