adding remove function after lesson

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           </div>
         </div>
         <div class="tabs-content">
-          <div class="tabs-content__item active"data-tab="1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, assumenda!</div>
-          <div class="tabs-content__item" data-tab="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto iste sequi alias praesentium sit magni!</div>
-          <div class="tabs-content__item"data-tab="3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus reprehenderit maxime debitis, culpa assumenda quisquam? Beatae sequi ipsum voluptates magnam.</div>
+          <div class="content content-1 active "data-tab="1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, assumenda!</div>
+          <div class="content content-2" data-tab="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto iste sequi alias praesentium sit magni!</div>
+          <div class="content content-3"data-tab="3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus reprehenderit maxime debitis, culpa assumenda quisquam? Beatae sequi ipsum voluptates magnam.</div>
         </div>
       </div>
       
