without marked task

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>firstName</th>
+          <th>lastName</th>
+          <th>age</th>
+        </tr>
+      </thead>
+    </table>
+      
+    <script src="/js/localStorage.js"></script>
     </div>
   
   </body>
 </html>
+
