--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <th class="header_cell">Avatar</th>
           </tr>
         </thead>
+        <tbody class="tableData"></tbody>
       </table>
     </div>
     <script src="/js/14-les-crud.js"></script>
