--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 					<button class="choose-elem__btn" type="button" data-type="h3" data-container="header">Заголовок H3</button>
 					<button class="choose-elem__btn" type="button" data-type="p" data-container="header">Абзац текста</button>
 					<button class="choose-elem__btn" type="button" data-type="img" data-container="header">Изображение</button>
+          <button class="choose-elem__btn" type="button" data-type="question" data-container="header">Опросник</button>
 				</div>
 				<div class="header__elements-wrapper"></div>
 			</header>
@@ -80,6 +81,7 @@
 					<button class="choose-elem__btn" type="button" data-type="h3" data-container="content-1">Заголовок H3</button>
 					<button class="choose-elem__btn" type="button" data-type="p" data-container="content-1">Абзац текста</button>
 					<button class="choose-elem__btn" type="button" data-type="img" data-container="content-1">Изображение</button>
+          <button class="choose-elem__btn" type="button" data-type="question" data-container="content-1">Опросник</button>
         </div>
 				<div class="content__elements-wrapper content-1__elements-wrapper"></div>
 			</div>
@@ -97,6 +99,7 @@
 						<button class="choose-elem__btn" type="button" data-type="h3" data-container="content-2">Заголовок H3</button>
 						<button class="choose-elem__btn" type="button" data-type="p" data-container="content-2">Абзац текста</button>
 						<button class="choose-elem__btn" type="button" data-type="img" data-container="content-2">Изображение</button>
+            <button class="choose-elem__btn" type="button" data-type="question" data-container="content-2">Опросник</button>
 					</div>
 					<div class="content__elements-wrapper content-2__elements-wrapper"></div>
 				</div>
@@ -114,6 +117,7 @@
 					<button class="choose-elem__btn" type="button" data-type="h3" data-container="content-3">Заголовок H3</button>
 					<button class="choose-elem__btn" type="button" data-type="p" data-container="content-3">Абзац текста</button>
 					<button class="choose-elem__btn" type="button" data-type="img" data-container="content-3">Изображение</button>
+          <button class="choose-elem__btn" type="button" data-type="question" data-container="content-3">Опросник</button>
         </div>
 				<div class="content__elements-wrapper content-3__elements-wrapper"></div>
 			</div>
@@ -132,6 +136,7 @@
 					<button class="choose-elem__btn" type="button" data-type="h3" data-container="footer">Заголовок H3</button>
 					<button class="choose-elem__btn" type="button" data-type="p" data-container="footer">Абзац текста</button>
 					<button class="choose-elem__btn" type="button" data-type="img" data-container="footer">Изображение</button>
+          <button class="choose-elem__btn" type="button" data-type="question" data-container="footer">Опросник</button>
         </div>
 				<div class="footer__elements-wrapper"></div>
 			</footer>
@@ -190,6 +195,18 @@
 			<img alt="" class="template-content" src="img/default.jpg">
       </div>
 		</div>
+
+    <div class="input-template hidden">
+      <div class="element input">
+        <p class="radio-desc">Is this information was useful?</p>
+        <input type="radio" class="template-content">Yes <br>
+        <input type="radio" class="template-content">No
+        <button class="delete-btn" type="button">
+            <span class="visually-hidden">Удалить элемент</span>
+          </button>
+      </div>
+    </div>
+  
 
 		<script src="script.js" type="module"></script>
 </body>
